--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "byteme-webhook",
   "version": "1.0.0",
-  "description": "ByteMe webhook for Render",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1"
   }
 }
